[project]
name = "repl-nix-secureshareurlgenerator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "simple-websocket>=1.1.0",
    "flask-socketio>=5.4.1",
    "requests>=2.32.3",
    "streamlit>=1.39.0",
    "plotly>=5.24.1",
]
